--- a/11-funnel/index.html
+++ b/11-funnel/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
@@ -43,7 +43,6 @@
             </div>
             <div class="header-right">
                 <span class="chart-tag yellow">Funnel</span>
-                <button type="button" class="btn-qa-demo" onclick="showQaDemo('转化漏斗各环节怎么样？', '漏斗图展示从曝光到成交各环节的数量与转化率，可问「哪一环节流失最多」「整体转化率多少」等。')">问答演示</button>
                 <button class="btn-view-code" onclick="toggleCode('code-funnel', this)">
                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="16 18 22 12 16 6"></polyline><polyline points="8 6 2 12 8 18"></polyline></svg>
                     Code
