--- a/17-map/index.html
+++ b/17-map/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
@@ -142,7 +142,6 @@
             </div>
             <div class="header-right">
                 <span class="chart-tag blue">Choropleth Map</span>
-                <button type="button" class="btn-qa-demo" onclick="showQaDemo('各省数据怎么样？', '地图用颜色表示各省指标，可问「哪个省最高」「某省是多少」「区域对比」等。')">问答演示</button>
                 <button class="btn-view-code" onclick="toggleCode('code-map', this)">
                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="16 18 22 12 16 6"></polyline><polyline points="8 6 2 12 8 18"></polyline></svg>
                     Code
