--- a/22-dual-axes/index.html
+++ b/22-dual-axes/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
@@ -52,7 +52,6 @@
             </div>
             <div class="header-right">
                 <span class="chart-tag blue">DualAxes</span>
-                <button type="button" class="btn-qa-demo" onclick="showQaDemo('两个指标的关系和趋势？', '双轴图左轴右轴对应不同量纲，可问「某月销售额和增长率」「两个指标是否同向」等。')">问答演示</button>
                 <button class="btn-view-code" onclick="toggleCode('code-basic', this)">
                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="16 18 22 12 16 6"></polyline><polyline points="8 6 2 12 8 18"></polyline></svg>
                     Code
