--- a/23-rose/index.html
+++ b/23-rose/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
@@ -49,7 +49,6 @@
             </div>
             <div class="header-right">
                 <span class="chart-tag blue">Rose</span>
-                <button type="button" class="btn-qa-demo" onclick="showQaDemo('各分类对比如何？', '玫瑰图用扇区半径表示数值，可问「最大的是哪类」「各类对比」「某类是多少」等。')">问答演示</button>
                 <button class="btn-view-code" onclick="toggleCode('code-basic', this)">
                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="16 18 22 12 16 6"></polyline><polyline points="8 6 2 12 8 18"></polyline></svg>
                     Code
