--- a/02-stacked-column/index.html
+++ b/02-stacked-column/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
@@ -47,7 +47,6 @@
             </div>
             <div class="header-right">
                 <span class="chart-tag blue">Stacked Column</span>
-                <button type="button" class="btn-qa-demo" onclick="showQaDemo('2024年月度各渠道销售构成怎么样？', '堆叠柱状图展示线上、线下、批发各月销售额构成；例如1月线上约320万、线下约280万、批发约200万，可看各渠道占比与趋势。')">问答演示</button>
                 <button class="btn-view-code" onclick="toggleCode('code-stacked', this)">
                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="16 18 22 12 16 6"></polyline><polyline points="8 6 2 12 8 18"></polyline></svg>
                     Code
