--- a/04-line/index.html
+++ b/04-line/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
@@ -44,7 +44,6 @@
             </div>
             <div class="header-right">
                 <span class="chart-tag blue">Basic Line</span>
-                <button type="button" class="btn-qa-demo" onclick="showQaDemo('月度销售额趋势怎么样？', '折线图展示各月销售额变化，可问「哪个月最高」「整体趋势是升是降」「某月是多少」等。')">问答演示</button>
                 <button class="btn-view-code" onclick="toggleCode('code-line-basic', this)">
                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="16 18 22 12 16 6"></polyline><polyline points="8 6 2 12 8 18"></polyline></svg>
                     Code
