--- a/13-pareto/index.html
+++ b/13-pareto/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
@@ -43,7 +43,6 @@
             </div>
             <div class="header-right">
                 <span class="chart-tag blue">Pareto</span>
-                <button type="button" class="btn-qa-demo" onclick="showQaDemo('帕累托分析结论是什么？', '帕累托图展示缺陷类型与累计占比，可问「前几类占80%」「哪类问题最多」「重点改进哪几项」等。')">问答演示</button>
                 <button class="btn-view-code" onclick="toggleCode('code-pareto', this)">
                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="16 18 22 12 16 6"></polyline><polyline points="8 6 2 12 8 18"></polyline></svg>
                     Code
