--- a/14-treemap/index.html
+++ b/14-treemap/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
@@ -42,7 +42,6 @@
             </div>
             <div class="header-right">
                 <span class="chart-tag green">Treemap</span>
-                <button type="button" class="btn-qa-demo" onclick="showQaDemo('各部门预算占比如何？', '矩形树图用面积表示占比，可问「哪个部门预算最多」「某部门占多少」「层级构成」等。')">问答演示</button>
                 <button class="btn-view-code" onclick="toggleCode('code-treemap', this)">
                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="16 18 22 12 16 6"></polyline><polyline points="8 6 2 12 8 18"></polyline></svg>
                     Code
