--- a/18-table/index.html
+++ b/18-table/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
@@ -537,7 +537,6 @@
             </div>
             <div class="header-right">
                 <span class="chart-tag">Table</span>
-                <button type="button" class="btn-qa-demo" onclick="showQaDemo('表格里某行某列是多少？', '表格展示明细数据，可问「某行某列的值」「按某列排序」「筛选某条件」等。')">问答演示</button>
                 <button class="btn-view-code" onclick="toggleCode('code-table', this)">
                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="16 18 22 12 16 6"></polyline><polyline points="8 6 2 12 8 18"></polyline></svg>
                     Code
