--- a/20-ring/index.html
+++ b/20-ring/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
@@ -95,7 +95,6 @@
             </div>
             <div class="header-right">
                 <span class="chart-tag blue">Ring</span>
-                <button type="button" class="btn-qa-demo" onclick="showQaDemo('各分类占比多少？', '环图展示分类占比，可问「最大的是哪类」「某类占多少」「中心可显示合计或重点指标」等。')">问答演示</button>
                 <button class="btn-view-code" onclick="toggleCode('code-basic', this)">
                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="16 18 22 12 16 6"></polyline><polyline points="8 6 2 12 8 18"></polyline></svg>
                     Code
