--- a/24-sunburst/index.html
+++ b/24-sunburst/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
@@ -45,7 +45,6 @@
             </div>
             <div class="header-right">
                 <span class="chart-tag blue">Sunburst</span>
-                <button type="button" class="btn-qa-demo" onclick="showQaDemo('层级占比如何？', '旭日图展示多层级占比，可问「某层级下谁最大」「某节点占比」「 drill-down 到某层」等。')">问答演示</button>
                 <button class="btn-view-code" onclick="toggleCode('code-basic', this)">
                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="16 18 22 12 16 6"></polyline><polyline points="8 6 2 12 8 18"></polyline></svg>
                     Code
